fix copy right below not visible

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2457,7 +2457,7 @@ input, select, textarea {
 				}
 
 	dl {
-		margin: 0 0 2em 0;
+		margin: 0 0 0em 0;
 	}
 
 		dl dt {
@@ -3337,7 +3337,7 @@ input, select, textarea {
 			}
 
 				#nav.alt ul li a {
-					font-size: 0.9em;
+					font-size: 0.85em;
 				}
 
 
@@ -3867,14 +3867,14 @@ input, select, textarea {
 			
 			
 			#main > .posts > article {
-				
 				border-color: #eeeeee;
 				border-left-width: 0px;
 				border-style: solid;
 				border-top-width: 0px; /* for border between cards */
 				text-align: center;
 				transition: opacity 0.2s ease-in-out;
-				
+				border: 6px solid rgb(246, 249, 252);
+				box-shadow: 0 0 3px #ccc;
 			}
 			
 			#main >.posts > article >  h2{
@@ -3894,6 +3894,14 @@ input, select, textarea {
 				#main > .posts > article .image:hover{
 					transition: opacity 0.2s ease-in-out;
 					opacity: .8;
+				}
+				#main > .posts > article >.image:hover > .overlay {
+					width:100%;
+					height:100%;
+					position:absolute;
+					background-color:#000;
+					opacity:0.5;
+					border-radius:30px;
 				}
 
 			@media screen and (max-width: 980px) {
@@ -3929,11 +3937,12 @@ input, select, textarea {
 				}
 
 				#main > .posts > article:nth-child(n) {
-					border-left-width: 0;
+					border-left-width: .5em;
+					border-right-width: .5em;
 				}
 
 				#main > .posts > article:nth-child(-n + 1) {
-					border-top-width: 0;
+					border-top-width: .5em;
 				}
 
 				#main > .posts > article .image {
@@ -4555,9 +4564,11 @@ input, select, textarea {
 		-webkit-flex-wrap: wrap;
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
-		padding: 5em 5em 3em 5em ;
+		padding: 5em 5em 3em 3em ;
 		width: calc(100% + 2em);
-		margin: 0 0 3em -2em;
+		/* margin: 0 0 -5em -5em; */
+		background-color: #f76660;
+		justify-content: center;
 	}
 
 		#footer > * {
